[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "toposcope"
version = "0.1.0"
description = "Render Linux hardware topology as a block diagram."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "toposcope contributors" }
]
dependencies = [
  "pyroute2>=0.9.6",
]

[project.scripts]
toposcope = "toposcope.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["toposcope*"]
